# RedBluT

./: .gitignore  README.md  runmyplayer.sh
docs/: README.md
documentazione/: README.md
player/: .gitignore  CMakeLists.txt  README.md
player/src/: BestMove.cpp  BestMove.hpp  Bitboard.cpp  Bitboard.h  Bitboard.hpp  Engine.cpp  Engine.h  Engine.hpp  NodeType.h  PositionHistory.cpp  PositionHistory.hpp  SearchersArgs.hpp  State.cpp  State.h  State.hpp  TTEntry.h  TTEntry.hpp  ThreadArgs.hpp  TransitionTable.cpp  TranspositionTable.h  TranspositionTable.hpp  ZobristParams.hpp  main.cpp
precompute/: README.md
precompute/generate/: all.py  loneliness.py  magic.py  move.py  snag.py  zobrist.py
precompute/tests/: test_move.py
precompute/utils/: utils.py
preprocessing/: loneliness.py  snag.py  utils.py
preprocessing/generate/: __init__.py  all.py  key.py  loneliness.py  move.py  snag.py
preprocessing/processed/: loneliness.txt
preprocessing/test/: check.py
preprocessing/tests/: test_move.py
preprocessing/utils/: utils.py
regole/: README.md
regoleCompetizione/: README.md
